--- a/index.html
+++ b/index.html
@@ -120,77 +120,60 @@
         <div class="overlay" data-nav-toggler data-overlay></div>
     </div>
 
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi quia quo facere eum possimus animi, atque
-        mollitia praesentium dolorum repellat officia quidem! Eos facilis nam iusto in ullam voluptatum dolorem. Minima,
-        recusandae velit. Expedita autem doloribus ipsum, accusamus, minus quibusdam nobis molestias consequuntur nisi
-        neque, dolores omnis unde id. Consequatur corrupti deserunt qui et rem voluptates officiis sit quo velit,
-        ducimus corporis eos explicabo, obcaecati beatae possimus veritatis nesciunt quod! Enim debitis blanditiis quam
-        quas dolore minus similique impedit architecto, temporibus consequatur harum, quae, ullam deleniti fugit
-        quisquam illum deserunt tempora rem dolores veritatis ut molestias ad explicabo at. Illo porro voluptates iste
-        sequi necessitatibus nulla error, ullam ipsam alias doloremque ad, minus at facilis ratione voluptate delectus
-        atque velit, sapiente cum quae? Consectetur necessitatibus aperiam reiciendis, quo ea voluptatibus maiores
-        nesciunt, non incidunt distinctio, commodi possimus libero perferendis sequi neque culpa repellat doloribus.
-        Veniam id officiis velit a, ex blanditiis numquam? Perspiciatis qui autem quam at, exercitationem tempore
-        dolores, facere quis dolorem commodi dolor eaque sunt quae cumque. Quia reiciendis officiis, culpa nostrum omnis
-        nesciunt nemo illum rem iste corporis nisi. Fugit, quo? Dolorem, voluptatibus, dolores sapiente sequi
-        consequuntur culpa explicabo laudantium nobis quidem accusantium, libero minus ut non dolorum amet! Nulla, eos.
-        Sint ex soluta harum, debitis ea facilis esse incidunt quis nisi hic quasi architecto doloremque pariatur
-        exercitationem praesentium sunt magnam qui nihil aspernatur in iste doloribus culpa error? Quia incidunt velit
-        officia dignissimos aut tempora ut id nisi, iste accusantium. Inventore neque voluptatum perspiciatis a dolorum
-        nihil odit velit dolore ducimus dolorem, quo tempore reprehenderit deserunt cumque expedita error quasi vitae ab
-        impedit et id delectus dolores aliquam nisi. Obcaecati at quod soluta vero iusto distinctio deleniti molestias
-        maxime eum provident suscipit quasi possimus est dolorum delectus, illo consequuntur dolor assumenda repudiandae
-        voluptatem enim excepturi! Cumque hic quae quas quam. Amet, consectetur autem ipsa perspiciatis, ducimus
-        recusandae cum nostrum quas vero officiis, quam consequatur. Odit id eum ab non ipsum cum temporibus ex
-        assumenda molestiae! Ipsam ducimus cupiditate natus qui dolore. Natus, libero maxime doloremque numquam
-        obcaecati perferendis est tempore. Rerum nam, aliquid possimus nisi placeat eligendi beatae illo facere
-        perferendis quia et quas, nostrum amet deleniti commodi, accusamus magni modi! Possimus, repellat, ut voluptatem
-        nemo autem natus omnis non beatae commodi sequi, ipsa inventore dolore modi magnam perspiciatis dignissimos a
-        laudantium odit quasi vero sit facere? Perferendis voluptates aspernatur iusto qui. Perferendis, qui nulla
-        pariatur illum nam quaerat vero consequuntur laudantium adipisci, iure, sit ratione voluptas. Doloremque natus
-        minus pariatur esse, veniam cumque atque sint magnam voluptas laborum animi dignissimos, labore odio facere
-        fugiat, exercitationem nisi voluptatum. Non ipsa animi dicta distinctio ab consectetur deserunt harum aut ipsam
-        a doloremque quis, qui nisi placeat quidem itaque nesciunt enim corporis vitae aspernatur voluptatem.
-        Consequuntur minus iste nemo rerum repudiandae autem voluptate excepturi similique adipisci nobis a quisquam,
-        perferendis, ipsa id. Dolorum rem beatae laudantium, non minima consequatur. Dolor deleniti distinctio maxime,
-        quo fugiat laudantium. Quasi eligendi aliquam amet nisi voluptatibus aliquid repudiandae voluptas quis provident
-        ullam, explicabo exercitationem quia, nobis, necessitatibus saepe incidunt? Odio tempora consequuntur, quidem
-        doloremque sint aspernatur quos dolores id architecto, commodi delectus quaerat impedit. Cum nam error est illum
-        rerum inventore quam suscipit sequi iste ab praesentium sed esse nostrum, quibusdam consequuntur atque velit
-        laborum. Provident officiis natus autem eaque recusandae culpa esse fuga? Nostrum non, sit nesciunt dolores nemo
-        maiores, dolorem doloribus mollitia praesentium quibusdam cumque aliquam necessitatibus reprehenderit saepe cum
-        facere at. Rem molestias deserunt fuga velit cupiditate, culpa libero recusandae, debitis porro alias pariatur
-        incidunt sed architecto explicabo, aut harum enim repudiandae tenetur? Eos corporis sequi quaerat a aut tempora
-        ab incidunt vitae est ipsum fugiat libero laudantium earum provident asperiores nisi officia commodi tempore,
-        doloribus eius consequuntur atque, vel, omnis quam. Officiis eum reprehenderit ipsa laborum iure repudiandae sed
-        at rerum, expedita necessitatibus labore sit similique tenetur, consequuntur molestiae culpa doloribus dolore
-        maiores obcaecati fugiat! Accusantium officia velit similique laudantium molestiae animi veniam dicta
-        consequuntur necessitatibus nisi beatae autem, architecto odio quas repellendus nobis, corrupti, mollitia quae
-        suscipit modi quasi atque? Ratione, non. Temporibus eveniet unde maxime recusandae, nam, magni quo esse nihil
-        consequuntur iusto vel perspiciatis aliquid eius atque vero sequi corrupti voluptatum facere delectus dolorem.
-        Aperiam sint nesciunt officia, harum cupiditate modi doloribus quos reiciendis exercitationem nisi numquam, nam
-        soluta minima minus, ad maxime. Libero minus consectetur natus optio iste nostrum corrupti, facere dicta ipsam
-        nobis molestias unde vero, sapiente repudiandae reprehenderit eius quisquam est error explicabo recusandae
-        aliquam, beatae nesciunt maxime culpa! Facere minima dolore, sed est dignissimos repellat voluptatum, sunt iste
-        dolorum repudiandae nesciunt vel magnam dolores. Necessitatibus nihil eligendi impedit porro a sequi nemo, at
-        voluptatum ipsa! Ea perferendis, quod quam tenetur cupiditate veritatis quis illo repellat nesciunt distinctio
-        esse illum aliquid quasi asperiores qui accusantium magnam doloribus corrupti temporibus rem dignissimos
-        consectetur voluptatem! Error eum nisi ducimus excepturi fugiat, doloribus quod consequatur optio esse dicta
-        quae voluptatem id ullam est a, aspernatur perferendis at, atque numquam tempore in? Commodi voluptates debitis
-        molestiae? Laborum porro earum maxime odit labore corporis iure. Officia in asperiores voluptas laborum dolorum
-        nesciunt architecto hic laudantium nemo consectetur id libero, harum dolore corporis nam dignissimos
-        praesentium? Deleniti laborum, culpa, quis officiis ea id dolore aspernatur ratione sint nam voluptatem totam
-        reiciendis? Voluptatum quos facilis ab voluptas, eaque rerum deleniti fugiat, quae enim reiciendis odit autem
-        excepturi, minus quia inventore aliquam magnam a voluptatibus totam modi! Fugit voluptatem incidunt nostrum,
-        soluta molestias beatae pariatur deserunt cupiditate dolorem cumque accusantium dolores excepturi, ab dolor
-        reiciendis cum animi eos at sapiente minus hic. Aut odit reiciendis facere sunt. Totam enim delectus quisquam
-        laborum magnam, praesentium ipsa nostrum aspernatur cumque quis, porro expedita similique suscipit adipisci
-        maxime eligendi dolores consectetur! Cupiditate alias fuga rem obcaecati nemo corrupti totam numquam quia
-        pariatur dolores sit, tempore saepe dolor facilis provident vel, libero qui neque aperiam voluptas eos corporis
-        placeat! Ut dicta ab consequuntur saepe, sit, inventore ipsum unde eum corporis, temporibus nam aut a
-        consequatur provident deserunt aliquid quod veniam illum ad quae in.
-    </p>
+    <section class="section hero active" id="home" arai-label="hero" data-section>
+        <div class="container">
+            <ul class="has-scrollbar">
+                <li class="scrollbar-item">
+                    <div class="hero-card has-bg-image"
+                        style="background-image: url('./assets/images/hero-banner-1.jpg');">
+                        <div class="card-content">
+                            <h1 class="h1 hero-title">
+                                Reveal The <br> Beauty of Skin
+                            </h1>
+                            <p class="hero-text">
+                                Made using clean, non-toxic ingredients, our products are
+                                designed for everyone.
+                            </p>
+                            <p class="price">Starting at $7.99</p>
+                            <a href="#" class="btn btn-primary">Shop Now</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="scrollbar-item">
+                    <div class="hero-card has-bg-image"
+                        style="background-image: url('./assets/images/hero-banner-2.jpg');">
+                        <div class="card-content">
+                            <h1 class="h1 hero-title">
+                                Reveal The <br> Beauty of Skin
+                            </h1>
+                            <p class="hero-text">
+                                Made using clean, non-toxic ingredients, our products are
+                                designed for everyone.
+                            </p>
+                            <p class="price">Starting at $7.99</p>
+                            <a href="#" class="btn btn-primary">Shop Now</a>
+                        </div>
+                    </div>
+                </li>
+                <li class="scrollbar-item">
+                    <div class="hero-card has-bg-image"
+                        style="background-image: url('./assets/images/hero-banner-3.jpg');">
+                        <div class="card-content">
+                            <h1 class="h1 hero-title">
+                                Reveal The <br> Beauty of Skin
+                            </h1>
+                            <p class="hero-text">
+                                Made using clean, non-toxic ingredients, our products are
+                                designed for everyone.
+                            </p>
+                            <p class="price">Starting at $7.99</p>
+                            <a href="#" class="btn btn-primary">Shop Now</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
 
     <script src="./assets/js/main.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
