--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <div class="overlay" data-nav-toggler data-overlay></div>
     </div>
 
-    <section class="section hero active" id="home" arai-label="hero" data-section>
+    <section class="section hero active" id="home" aria-label="hero" data-section>
         <div class="container">
             <ul class="has-scrollbar">
                 <li class="scrollbar-item">
@@ -168,6 +168,67 @@
                             </p>
                             <p class="price">Starting at $7.99</p>
                             <a href="#" class="btn btn-primary">Shop Now</a>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="section collection active" id="collection" aria-label="collection" data-section>
+        <div class="container">
+            <ul class="collection-list">
+                <li>
+                    <div class="collection-card has-before hover:shine">
+                        <h2 class="h2 card-title">
+                            Summer Collection
+                        </h2>
+                        <p class="card-text">
+                            Starting at $17.99
+                        </p>
+                        <a href="#" class="btn-link">
+                            <span class="span">Shop Now</span>
+                            <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                        </a>
+
+                        <div class="has-bg-image" style="background-image: url('./assets/images/collection-1.jpg');">
+
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="collection-card has-before hover:shine">
+                        <h2 class="h2 card-title">
+                            What's New?
+                        </h2>
+                        <p class="card-text">
+                            Get the Glow
+                        </p>
+                        <a href="#" class="btn-link">
+                            <span class="span">Discover Now</span>
+                            <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                        </a>
+
+                        <div class="has-bg-image" style="background-image: url('./assets/images/collection-2.jpg');">
+
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="collection-card has-before hover:shine">
+                        <h2 class="h2 card-title">
+                            Buy 1 Get 1
+                        </h2>
+                        <p class="card-text">
+                            Starting at $7.50
+                        </p>
+                        <a href="#" class="btn-link">
+                            <span class="span">Discover Now</span>
+                            <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+                        </a>
+
+                        <div class="has-bg-image" style="background-image: url('./assets/images/collection-3.jpg');">
+
                         </div>
                     </div>
                 </li>
