07. js-portfolio-53-glowing. Banner section.

--- a/index.html
+++ b/index.html
@@ -878,6 +878,37 @@
         </div>
     </section>
 
+    <section class="section banner active" aria-label="banner" data-section="">
+        <div class="container">
+            <ul class="banner-list">
+                <li>
+                    <div class="banner-card banner-card-1 has-before hover:shine">
+                        <p class="card-subtitle">New Collection</p>
+                        <h2 class="h2 card-title">
+                            Discover Our Autumn Skincare
+                        </h2>
+                        <a href="#" class="btn btn-secondary">Explore More</a>
+                        <div class="has-bg-image" style="background-image: url('./assets/images/banner-1.jpg');">
+
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="banner-card banner-card-1 has-before hover:shine">
+                        <h2 class="h2 card-title">25% OFF Everything</h2>
+                        <p class="card-text">
+                            Makeup with extended range in colors for every human.
+                        </p>
+                        <a href="#" class="btn btn-secondary">Shop Sale</a>
+                        <div class="has-bg-image" style="background-image: url('./assets/images/banner-2.jpg');">
+
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
     <script src="./assets/js/main.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
