08. js-portfolio-53-glowing. Feature section.

--- a/index.html
+++ b/index.html
@@ -878,7 +878,7 @@
         </div>
     </section>
 
-    <section class="section banner active" aria-label="banner" data-section="">
+    <section class="section banner active" aria-label="banner" data-section>
         <div class="container">
             <ul class="banner-list">
                 <li>
@@ -903,6 +903,52 @@
                         <div class="has-bg-image" style="background-image: url('./assets/images/banner-2.jpg');">
 
                         </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <section class="section feature active" aria-label="feature" data-section>
+        <div class="container">
+            <h2 class="h2-large section-title">
+                Why Shop with Glowing?
+            </h2>
+            <ul class="flex-list">
+                <li class="flex-item">
+                    <div class="feature-card">
+                        <img src="./assets/images/feature-1.jpg" alt="feature" width="204" height="236" loading="lazy"
+                            class="card-icon">
+
+                        <h3 class="h3 card-title">Guaranted PURE</h3>
+                        <p class="card-text">
+                            All Grace formulations ad here to strict purity standarts
+                            and will never contain harsh or toxic ingredients_
+                        </p>
+                    </div>
+                </li>
+                <li class="flex-item">
+                    <div class="feature-card">
+                        <img src="./assets/images/feature-2.jpg" alt="feature" width="204" height="236" loading="lazy"
+                            class="card-icon">
+
+                        <h3 class="h3 card-title">Completly Cruelty-Free</h3>
+                        <p class="card-text">
+                            All Grace formulations ad here to strict purity standarts
+                            and will never contain harsh or toxic ingredients_
+                        </p>
+                    </div>
+                </li>
+                <li class="flex-item">
+                    <div class="feature-card">
+                        <img src="./assets/images/feature-3.jpg" alt="feature" width="204" height="236" loading="lazy"
+                            class="card-icon">
+
+                        <h3 class="h3 card-title">Ingredient Sourcing</h3>
+                        <p class="card-text">
+                            All Grace formulations ad here to strict purity standarts
+                            and will never contain harsh or toxic ingredients_
+                        </p>
                     </div>
                 </li>
             </ul>
