--- a/index.html
+++ b/index.html
@@ -955,6 +955,37 @@
         </div>
     </section>
 
+    <section class="section offer active" aria-label="offer" data-section>
+        <div class="container">
+            <figure class="offer-banner">
+                <img src="./assets/images/offer-banner-1.jpg" alt="offer" width="305" height="408" loading="lazy"
+                    class="w-100">
+                <img src="./assets/images/offer-banner-2.jpg" alt="offer" width="450" height="625" loading="lazy"
+                    class="w-100">
+            </figure>
+
+            <div class="offer-content">
+                <p class="offer-subtitle">
+                    <span class="span">Special Offer</span>
+                    <span class="badge" aria-label="20% OFF">-20%</span>
+                </p>
+                <h2 class="h2-large section-title">Mountain Pine Bath Oil</h2>
+                <p class="section-text">
+                    Made using clean, non-toxic ingredients, our products are designed for everyone.
+                </p>
+
+                <div class="countdown">
+                    <span class="time" aria-label="days">15</span>
+                    <span class="time" aria-label="hours">21</span>
+                    <span class="time" aria-label="minutes">45</span>
+                    <span class="time" aria-label="seconds">08</span>
+                </div>
+
+                <a href="#" class="btn btn-primary">Get Only $39.00</a>
+            </div>
+        </div>
+    </section>
+
     <script src="./assets/js/main.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
