--- a/index.html
+++ b/index.html
@@ -986,6 +986,69 @@
         </div>
     </section>
 
+    <section class="section blog active" aria-label="blog" data-section>
+        <div class="container">
+            <h2 class="h2-large section-title">More to Discover</h2>
+
+            <ul class="flex-list">
+                <li class="flex-item">
+                    <div class="blog-card">
+                        <figure class="card-banner img-holder has-before hover:shine"
+                            style="--width: 700; --height: 450;">
+                            <img src="./assets/images/blog-1.jpg" alt="cover" class="img-cover" width="700" height="450"
+                                loading="lazy">
+                        </figure>
+
+                        <h3 class="h3">
+                            <a href="#" class="card-title">Find a Store</a>
+                        </h3>
+
+                        <a href="#" class="btn-link">
+                            <span class="span">Our Store</span>
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+                    </div>
+                </li>
+                <li class="flex-item">
+                    <div class="blog-card">
+                        <figure class="card-banner img-holder has-before hover:shine"
+                            style="--width: 700; --height: 450;">
+                            <img src="./assets/images/blog-2.jpg" alt="cover" class="img-cover" width="700" height="450"
+                                loading="lazy">
+                        </figure>
+
+                        <h3 class="h3">
+                            <a href="#" class="card-title">From Our Blog</a>
+                        </h3>
+
+                        <a href="#" class="btn-link">
+                            <span class="span">Our Store</span>
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+                    </div>
+                </li>
+                <li class="flex-item">
+                    <div class="blog-card">
+                        <figure class="card-banner img-holder has-before hover:shine"
+                            style="--width: 700; --height: 450;">
+                            <img src="./assets/images/blog-3.jpg" alt="cover" class="img-cover" width="700" height="450"
+                                loading="lazy">
+                        </figure>
+
+                        <h3 class="h3">
+                            <a href="#" class="card-title">Our Story</a>
+                        </h3>
+
+                        <a href="#" class="btn-link">
+                            <span class="span">Our Store</span>
+                            <ion-icon name="arrow-forward-outline" aria-hidden="true"></ion-icon>
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
+
     <script src="./assets/js/main.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
