11. js-portfolio-53-glowing. Footer section.

--- a/index.html
+++ b/index.html
@@ -1049,6 +1049,112 @@
         </div>
     </section>
 
+    <footer class="footer active" data-section="">
+        <div class="container">
+            <div class="footer-top">
+                <ul class="footer-list">
+                    <li>
+                        <p class="footer-list-title">Company</p>
+                    </li>
+                    <li>
+                        <p class="footer-list-text">
+                            Find a location nearest you. See <a href="#" class="link">Our Stores</a>
+                        </p>
+                    </li>
+                    <li>
+                        <p class="footer-list-text bold">+12 345 67890</p>
+                    </li>
+                    <li>
+                        <p class="footer-list-text">email@email.com</p>
+                    </li>
+                </ul>
+                <ul class="footer-list">
+                    <li>
+                        <p class="footer-list-title">Useful links</p>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">New Products</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">Best Sellers</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">Bundle & Save</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">Online Gift Card</a>
+                    </li>
+                </ul>
+                <ul class="footer-list">
+                    <li>
+                        <p class="footer-list-title">Information</p>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">Start a Return</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">Contact us</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">Shipping FAQ</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">Terms & Conditions</a>
+                    </li>
+                    <li>
+                        <a href="#" class="footer-link">Privacy Policy</a>
+                    </li>
+                </ul>
+
+                <div class="footer-list">
+                    <p class="newsletter-title">Good emails.</p>
+                    <p class="newsletter-text">
+                        Enter your email below to be the first to know about new
+                        collections and products launches.
+                    </p>
+                    <form class="newsletter-form">
+                        <input type="email" name="email_address" class="email-field" placeholder="Enter your email"
+                            required>
+                        <button type="submit" class="btn btn-primary">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="wrapper">
+                    <p class="copyright">&copy; 2024 Freetime</p>
+                    <ul class="social-list">
+                        <li>
+                            <a href="#" class="social-link">
+                                <ion-icon name="logo-twitter"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-link">
+                                <ion-icon name="logo-facebook"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-link">
+                                <ion-icon name="logo-instagram"></ion-icon>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="social-link">
+                                <ion-icon name="logo-youtube"></ion-icon>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+
+                <a href="#" class="logo">
+                    <img src="./assets/images/logo.png" alt="logo" width="179" height="26" loading="lazy">
+                </a>
+
+                <img src="./assets/images/pay.png" alt="footer" class="w-100" width="313" height="28" loading="lazy">
+            </div>
+        </div>
+    </footer>
+
     <script src="./assets/js/main.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
