12. js-portfolio-53-glowing. BackToTop btn. ScrollReveal animation.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Project | Glowing</title>
 </head>
 
-<body>
+<body id="top">
     <header class="header">
         <div class="alert">
             <div class="container">
@@ -120,7 +120,7 @@
         <div class="overlay" data-nav-toggler data-overlay></div>
     </div>
 
-    <section class="section hero active" id="home" aria-label="hero" data-section>
+    <section class="section hero" id="home" aria-label="hero" data-section>
         <div class="container">
             <ul class="has-scrollbar">
                 <li class="scrollbar-item">
@@ -175,7 +175,7 @@
         </div>
     </section>
 
-    <section class="section collection active" id="collection" aria-label="collection" data-section>
+    <section class="section collection" id="collection" aria-label="collection" data-section>
         <div class="container">
             <ul class="collection-list">
                 <li>
@@ -236,7 +236,7 @@
         </div>
     </section>
 
-    <section class="section shop active" id="shop" aria-label="shop" data-section="">
+    <section class="section shop" id="shop" aria-label="shop" data-section="">
         <div class="container">
             <div class="title-wrapper">
                 <h2 class="h2 section-title">Our Bestsellers</h2>
@@ -546,7 +546,7 @@
             </ul>
         </div>
     </section>
-    <section class="section shop active" id="shop" aria-label="shop" data-section>
+    <section class="section shop" id="shop" aria-label="shop" data-section>
         <div class="container">
             <div class="title-wrapper">
                 <h2 class="h2 section-title">Under $25</h2>
@@ -878,7 +878,7 @@
         </div>
     </section>
 
-    <section class="section banner active" aria-label="banner" data-section>
+    <section class="section banner" aria-label="banner" data-section>
         <div class="container">
             <ul class="banner-list">
                 <li>
@@ -909,7 +909,7 @@
         </div>
     </section>
 
-    <section class="section feature active" aria-label="feature" data-section>
+    <section class="section feature" aria-label="feature" data-section>
         <div class="container">
             <h2 class="h2-large section-title">
                 Why Shop with Glowing?
@@ -955,7 +955,7 @@
         </div>
     </section>
 
-    <section class="section offer active" aria-label="offer" data-section>
+    <section class="section offer" aria-label="offer" data-section>
         <div class="container">
             <figure class="offer-banner">
                 <img src="./assets/images/offer-banner-1.jpg" alt="offer" width="305" height="408" loading="lazy"
@@ -986,7 +986,7 @@
         </div>
     </section>
 
-    <section class="section blog active" aria-label="blog" data-section>
+    <section class="section blog" aria-label="blog" data-section>
         <div class="container">
             <h2 class="h2-large section-title">More to Discover</h2>
 
@@ -1049,7 +1049,7 @@
         </div>
     </section>
 
-    <footer class="footer active" data-section="">
+    <footer class="footer" data-section="">
         <div class="container">
             <div class="footer-top">
                 <ul class="footer-list">
@@ -1154,6 +1154,11 @@
             </div>
         </div>
     </footer>
+
+    <a href="#" class="back-top-btn" aria-label="back to top" data-back-top-btn>
+        <ion-icon name="arrow-up" aria-hidden="true"></ion-icon>
+    </a>
+
 
     <script src="./assets/js/main.js" defer></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
